--- a/media/css/main.css
+++ b/media/css/main.css
@@ -408,6 +408,7 @@ h2.tab-header {
 
 #invitation {
     position: relative;
+    overflow: hidden;
     display: block;
     height: 250px;
     width: auto;
