--- a/media/css/main.css
+++ b/media/css/main.css
@@ -77,10 +77,46 @@ body > .container {
 /*--------------------------------------------------
     Searchable Educator Map
   --------------------------------------------------*/
-
+  
 div.map-container div.search {
     float: left;
     width: 30%;
+    font-size: .8em;
+}
+
+div.map-container div.search .accordion-body {
+    margin-left: 20px;
+}
+
+div.map-container div.search .accordion-body input[type="radio"],
+div.map-container div.search .accordion-body input[type="checkbox"] {
+    margin: 1px 0 0;
+}
+
+div.map-container ul.breadcrumb {
+    padding: 0;
+    margin: -5px 0 10px;
+    background-color: white;
+}
+
+div.map-container ul.breadcrumb li a {
+    color: #3E6D8E;
+    border-bottom: 1px solid #b3cee1;
+    border-right: 1px solid #b3cee1;
+    padding: 3px 15px 3px 4px;
+    margin: 2px 2px 2px 0;
+    text-decoration: none;
+    font-size: 90%;
+    line-height: 2.6;
+    white-space: nowrap;
+    background: #E0EAF1 url('/site_media/img/remove_criteria.png') no-repeat right center;    
+}
+
+div.map-container ul.breadcrumb li a:hover {
+    background-color: #c4dae9;
+    border-bottom: 1px solid #c4dae9;
+    border-right: 1px solid #c4dae9;
+    text-decoration: none;
 }
 
 div.map-container div.map {
