Update about, help, contact links.

--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -40,9 +40,9 @@
         {% endif %}
         </li>
     {% endblock %}
-        <li class="flatpages"><a href="/about/">ABOUT</a></li>
-        <li class="flatpages"><a href="/help/">HELP</a></li>
-        <li class="flatpages"><a href="/contact/">CONTACT</a></li>
+        <li class="flatpages"><a href="/pages/about/">ABOUT</a></li>
+        <li class="flatpages"><a href="/pages/help/">HELP</a></li>
+        <li class="flatpages"><a href="/pages/contact/">CONTACT</a></li>
     </ul>
     {% block topnavbarleftitems %}{% endblock %}
     {% block topnavbarrightitems %}{% endblock %}
